Using "find" will slow/freeze/crash gtranslator when the po file is big
STEP:
- open gtranslator
- open a big po file like gimp.po-ui.master.zh_CN.po
- use "find" to search some Chinese words like “蒙板” (English words can trigger this bug as well but better than Chinese words)
- click "find next" button repeatedly
- click "find next" button quickly and repeatedly if gtranslator didn't freeze or crash
RUNTIME:
- OS: Fedora Silverblue 39.20231125.0 (2023-11-25T02:15:38Z)
- DE: GNOME 45.1
- gtranslator: 45.3 from flathub
PS: #144 (closed) still exists.